--- a/test/containers/DockerfileChatSample
+++ b/test/containers/DockerfileChatSample
@@ -5,11 +5,17 @@ ENV DOTNET_USE_POLLING_FILE_WATCHER=true
 EXPOSE 80
 
 WORKDIR /src
-COPY ["code/SignalR-samples/ChatSample", "ChatSample"]
-RUN dotnet restore ChatSample/ChatSample/ChatSample.csproj
-COPY . .
-WORKDIR  /src/ChatSample/ChatSample
+COPY ["code/signalr/hubs/sample", "ChatSample"]
+RUN dotnet tool install -g Microsoft.Web.LibraryManager.Cli
+RUN dotnet restore ChatSample/SignalRChat.csproj
+RUN apt-get update -yq && apt-get upgrade -yq && apt-get install -yq curl git nano
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && apt-get install -yq nodejs build-essential
+RUN npm install -g npm
 
+COPY . .
+WORKDIR  /src/ChatSample
+RUN npm install
+RUN npm build
 RUN dotnet build --no-restore -c $BUILD_CONFIGURATION
 
-ENTRYPOINT ["dotnet", "run", "--no-build", "--no-launch-profile", "-c", "Debug", "--"]
+ENTRYPOINT ["dotnet", "run", "--no-launch-profile", "-c", "Debug", "--"]
