--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-certifi==2018.11.29
+certifi==2020.6.20
 chardet==3.0.4
-idna==2.8
-requests==2.21.0
-six==1.12.0
-urllib3==1.25.2
-websocket-client==0.55.0
+idna==2.10
+pkg-resources==0.0.0
+requests==2.24.0
+six==1.15.0
+urllib3==1.25.10
+websocket-client==0.57.0
