--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+autopep8==1.5.4
+certifi==2020.6.20
+chardet==3.0.4
+coverage==5.3
+idna==2.10
 msgpack==1.0.0
+pkg-resources==0.0.0
+pycodestyle==2.6.0
 requests==2.25.1
-websocket-client==0.54.0
+six==1.15.0
+toml==0.10.2
+urllib3==1.25.7
+websocket-client==1.2.1
