--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ after_success:
   - bash <(cat codecov.yml | curl --data-binary @- https://codecov.io/validate)
 install:
   - cd containers
-  - docker-compose up -d
+  - docker compose up -d
   - docker ps
   - cd ..
 language: python
