--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -25,8 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 coverage
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install .[dev]
     - name: Test and coverage
       run: |
          # Test
