--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -30,3 +30,8 @@ jobs:
       run: |
          # Test
          coverage run -m unittest discover -s test/ -p "*_test.py"
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
