--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -26,12 +26,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[dev]
+        pip install codecov
     - name: Test and coverage
       run: |
          # Test
-         coverage run -m unittest discover -s test/ -p "*_test.py"
+         pytest --junitxml=reports/junit.xml --cov=. --cov-report=xml:coverage.xml --cov-report=term
     - name: Upload test results to Codecov
-      if: ${{ !cancelled() }}
-      uses: codecov/test-results-action@v1
+      uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        files: |
+          coverage.xml
+          reports/junit.xml
+        fail_ci_if_error: true
