--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
-    - run: docker compose -f containers/docker-compose.yml up -d
+    - run: SIGNALRCORE_AZURE_CONNECTION_STRING=${{ secrets.SIGNALRCORE_AZURE_CONNECTION_STRING }} docker compose -f containers/docker-compose.yml up -d
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
