--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -31,6 +31,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[dev]
         pip install codecov
+    - name: Wait for services
+      run: |
+        for i in {1..30}; do
+          if curl -f http://localhost:7071/api/negotiate; then
+            echo "Service ready"
+            exit 0
+          fi
+          sleep 2
+        done
+        echo "Service not ready"
+        exit 1
     - name: Test and coverage
       run: |
          # Test
