--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -18,7 +18,7 @@ jobs:
     - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
     - name: run SignalR server and Azure function
       env:
-        SIGNALRCORE_AZURE_CONNECTION_STRING: ${{ secrets.SIGNALRCORE_AZURE_CONNECTION_STRING }}
+        SIGNALRCORE_AZURE_CONNECTION_STRING: "Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=${{ secrets.SIGNALRCORE_AZCS }};Version=1.0;"
       run: |
         docker compose -f containers/docker-compose.yml up -d
     - uses: actions/checkout@v2
