--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -18,9 +18,7 @@ jobs:
     - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
     - name: Build env var
       run: |
-        export SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=${ACCESSKEY};Version=1.0;"
-      env:
-        ACCESSKEY: ${{ secrets.SIGNALRCORE_AZCS }}
+        export SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=${{ secrets.SIGNALRCORE_AZCS }};Version=1.0;"
     - name: run SignalR server and Azure function
       env:
         SIGNALRCORE_AZURE_CONNECTION_STRING: $SIGNALRCORE_AZURE_CONNECTION_STRING
