--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,13 +16,11 @@ jobs:
 
     steps:
     - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
-    - name: Build env var
-      run: |
-        export SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=${{ secrets.SIGNALRCORE_AZCS }};Version=1.0;"
     - name: run SignalR server and Azure function
       env:
-        SIGNALRCORE_AZURE_CONNECTION_STRING: $SIGNALRCORE_AZURE_CONNECTION_STRING
+        MYSECRET: ${{ secrets.SIGNALRCORE_AZCS }}
       run: |
+        export SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=$MYSECRET;Version=1.0;"
         docker compose -f containers/docker-compose.yml up -d
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
