--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -28,9 +28,9 @@ jobs:
     - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
     - name: run SignalR server and Azure function
       env:
-        MYSECRET: ${{ secrets.SIGNALRCORE_AZCS }}
+        ACCESS_KEY: ${{ secrets.SIGNALRCORE_AZCS }}
       run: |
-        SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=""$MYSECRET"";Version=1.0;" &&
+        SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=${ACCESS_KEY};Version=1.0;"
         docker compose -f containers/docker-compose.yml up -d
     - name: Wait for services (azure func)
       run: |
