--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
-    - run: docker compose -f containers/docker-compose.yml up -d
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -27,6 +25,31 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[dev]
         pip install codecov
+    - run: git clone https://github.com/mandrewcito/signalrcore-containertestservers containers
+    - name: run SignalR server and Azure function
+      run: SIGNALRCORE_AZURE_CONNECTION_STRING="Endpoint=https://signalrcore-server-mandrewcito-test.service.signalr.net;AccessKey=""${ACCESS_KEY}"";Version=1.0;" docker compose -f containers/docker-compose.yml up -d
+      env:
+        ACCESS_KEY: ${{ secrets.SIGNALRCORE_AZCS }}
+    - name: Wait for services (azure func)
+      run: |
+        for i in {1..30}; do
+          if curl -f http://localhost:7071/api/health; then
+            exit 0
+          fi
+          sleep 2
+        done
+        echo "Service not ready"
+        exit 1
+    - name: Wait for services (SignalR server)
+      run: |
+        for i in {1..30}; do
+          if curl -f http://localhost:5000/health; then
+            exit 0
+          fi
+          sleep 2
+        done
+        echo "Service not ready"
+        exit 1
     - name: Test and coverage
       run: |
          # Test
