--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -5,9 +5,9 @@ name: Integration tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'release/*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, 'release/*' ]
 
 jobs:
   build:
